// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

declare function foo(): void;
export default foo(); // sig. verification error - file is whitelisted

=====================================output=====================================
// @flow

declare function foo(): void;
export default foo(); // sig. verification error - file is whitelisted

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

declare function foo(): void;
export default foo(); // sig. verification error - dirA is whitelisted

=====================================output=====================================
// @flow

declare function foo(): void;
export default foo(); // sig. verification error - dirA is whitelisted

================================================================================
`;
